pass to a single class to generic class for all the FP datasets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
 
 
 
-project(FP2 VERSION 0.1 DESCRIPTION "Custom dataset following Feature Proposal 2 FP2" LANGUAGES CXX)
+project(FP VERSION 0.1 DESCRIPTION "Custom dataset following Feature Proposals " LANGUAGES CXX)
 
 
 set(default_build_type "Release")
@@ -18,45 +18,45 @@ endif()
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_library(FP2 fp2.cpp include/custom-datasets/fp2.hpp)
+add_library(FPX fpx.cpp include/custom-datasets/fpx.hpp)
 
 
 find_package(Torch REQUIRED)
 
 
-target_include_directories(FP2 PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+target_include_directories(FPX PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	"$<INSTALL_INTERFACE:include>")
 
-target_link_libraries(FP2 PUBLIC  "${TORCH_LIBRARIES}")
+target_link_libraries(FPX PUBLIC  "${TORCH_LIBRARIES}")
 
 
-install(TARGETS FP2 EXPORT FP2Targets DESTINATION lib)
+install(TARGETS FPX EXPORT FPXTargets DESTINATION lib)
 install(DIRECTORY include/ DESTINATION include/)
 
-install(EXPORT FP2Targets
-	FILE FP2Targets.cmake
-	DESTINATION lib/cmake/FP2
+install(EXPORT FPXTargets
+	FILE FPXTargets.cmake
+	DESTINATION lib/cmake/FPX
 	)
 include(CMakePackageConfigHelpers)
 # generate the config file that is includes the exports
 configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
-	"${CMAKE_CURRENT_BINARY_DIR}/FP2Config.cmake"
-	INSTALL_DESTINATION "lib/cmake/FP2"
+	"${CMAKE_CURRENT_BINARY_DIR}/FPXConfig.cmake"
+	INSTALL_DESTINATION "lib/cmake/FPX"
 	NO_SET_AND_CHECK_MACRO
 	NO_CHECK_REQUIRED_COMPONENTS_MACRO
 	)
 write_basic_package_version_file(
-	"${CMAKE_CURRENT_BINARY_DIR}/FP2ConfigVersion.cmake"
+	"${CMAKE_CURRENT_BINARY_DIR}/FPXConfigVersion.cmake"
 	VERSION "0.1.1.0"
 	COMPATIBILITY AnyNewerVersion
 	)
 install(FILES
-	${CMAKE_CURRENT_BINARY_DIR}/FP2Config.cmake
-	${CMAKE_CURRENT_BINARY_DIR}/FP2ConfigVersion.cmake
-	DESTINATION lib/cmake/FP2
+	${CMAKE_CURRENT_BINARY_DIR}/FPXConfig.cmake
+	${CMAKE_CURRENT_BINARY_DIR}/FPXConfigVersion.cmake
+	DESTINATION lib/cmake/FPX
 	)
-export(EXPORT FP2Targets
-	FILE "${CMAKE_CURRENT_BINARY_DIR}/FP2Targets.cmake"
+export(EXPORT FPXTargets
+	FILE "${CMAKE_CURRENT_BINARY_DIR}/FPXTargets.cmake"
 	)
 execute_process(COMMAND "git" "log" "--format='%H'" "-n 1"
 	WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
