--- a/Config.cmake.in
+++ b/Config.cmake.in
@@ -1,3 +1,3 @@
 @PACKAGE_INIT@
 
-include ( "${CMAKE_CURRENT_LIST_DIR}/FP2Targets.cmake" )
+include ( "${CMAKE_CURRENT_LIST_DIR}/FPXTargets.cmake" )
